--- a/index.html
+++ b/index.html
@@ -5,13 +5,37 @@
     <title>Api</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+
+
   </head>
   <body>
+    <!-- Comment #2: SDK -->
+    <div id="fb-root"></div>
+    <script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '364210100597737',
+          xfbml      : true,
+          version    : 'v2.8'
+        });
+        FB.AppEvents.logPageView();
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "https://connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+
     <div class="container">
 
     <div class="form-group">
       <div class="row">
-        <h1 class="col-md-3">Name</h1>
+        <h1 class="col-md-4">Name</h1>
         <div class="col-md-8">
         <input type="text" id="name" class="form-control">
       </div>
@@ -19,7 +43,7 @@
     </div>
     <div class="form-group">
       <div class="row">
-        <h1 class="col-md-3">Last Name</h1>
+        <h1 class="col-md-4">Last Name</h1>
         <div class="col-md-8">
         <input type="text" id="lastname" class="form-control">
         </div>
@@ -28,8 +52,10 @@
     <div class="text-xs-center">
     <button id="getJoke" class=" btn btn-lg btn-success">getJoke</button>
   </div>
-    <h2></h2>
 
+    <h2></h2>
+    <!-- Comment #4: Plugin Code -->
+<div class="fb-quote"></div>
   </div>
 
 
